# updatebot

./: .coveragerc  .flake8  .gitignore  README.md  automation.py  codecov.yml  commentBug.py  components.py  debug.py  fileBug.py  format.sh  localconfig.py.example  pyproject.toml  run.py  setup_notes.md  test.py
.circleci/: config.yml  pr_comment.sh  run_cmd.sh
apis/: apikey.py.example  bugzilla_api.py  phabricator.py  taskcluster.py  treestatus.py
components/: bugzilla.py  commandprovider.py  commandrunner.py  db.py  dbc.py  dbmodels.py  git.py  hg.py  libraryprovider.py  logging.py  mach_vendor.py  providerbase.py  scmprovider.py  utilities.py
docs/: existing_job.md  existing_job.mermaid  new_job.md  new_job.mermaid
jobtypes/: vendoring.py
tasktypes/: base.py  commitalert.py  vendoring.py
tests/: automation_configuration.py  bugzilla.py  class_passing.py  database.py  dynamic_resolution.py  frequency.py  function_wrapping.py  functionality.py  functionality_all_platforms.py  functionality_commitalert.py  functionality_two_platforms.py  functionality_utilities.py  gen_test_from_try_run.py  lambda_capture.py  library.py  memoize.py  merge_dict.py  mock_commandprovider.py  mock_libraryprovider.py  mock_logger.py  mock_repository.py  mock_treeherder_server.py  multiple_inheritence.py  phabricator.py  python_language.py  run_command.py  scm.py  taskcluster_api_response_actionsjson.txt  test-repo-0886ba657dedc54fad06018618cc07689198abea.bundle  test-repo-3b0c38accbfc542f3f75ab21227c18ad554570c4.bundle  test-repo-7c9e119ef8d30f4c938f6337ad1715732ac1b023.bundle  test-repo-9dd7270d76d9e63a4ada40d358dd0e4505d16ab3.bundle  test-repo-b321ea35eb25874e1531c87ed53e03bb81f7693b.bundle  test-repo-b6972c67b63be20a4b28ed246fd06f6173265bb5.bundle  test-repo-f80c792e9a279cab9abedf7f3a8f4e41deaef649.bundle  test-repo-fb4216ff88bdfbe73617b8c5ebeb9da07a3cf830.bundle  test-repo.bundle  treeherder_api.py  treeherder_api_response_1.txt  (+5 more)
(+57 files in other folders)
