[tool.poetry]
name = "updatebot"
version = "1.0.0"
description = "Automation for updating third party libraries for Firefox"
authors = ["Tom Ritter <tom@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^41.0.3"
json-e = "^4.4.3"
requests = "^2.28.1"
PyMySQL = "^1.0.2"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
sentry-sdk = "^1.9.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
coverage = "^5.5"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
