[tool.poetry]
name = "updatebot"
version = "1.0.0"
description = "Automation for updating third party libraries for Firefox"
authors = ["Tom Ritter <tom@mozilla.com>"]
license = "MPL-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^46.0.5"
json-e = "^4.8.2"
requests = "^2.32.5"
PyMySQL = "^1.1.2"
python-dateutil = "^2.9.0.post0"
PyYAML = "^6.0.3"
sentry-sdk = "^2.54.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
coverage = "^7.13.4"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.autopep8]
ignore = "E501,E402,E275"
in-place = true
recursive = true
